# qcow2-lib

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  clippy.toml
crates/qcow2/: Cargo.toml
crates/qcow2-core/: Cargo.toml
crates/qcow2-core/src/: error.rs  lib.rs  lru.rs
crates/qcow2-core/src/engine/: bitmap_manager.rs  cache.rs  cluster_mapping.rs  hash_manager.rs  image_meta.rs  metadata_io.rs  mod.rs  reader.rs  refcount_manager.rs  snapshot_manager.rs  writer.rs
crates/qcow2-core/src/engine/block_writer/: buffer.rs  config.rs  engine.rs  finalize.rs  metadata.rs  mod.rs  zero_detect.rs
crates/qcow2-core/src/engine/encryption/: af_splitter.rs  cipher.rs  key_derivation.rs  mod.rs
crates/qcow2-core/src/engine/writer/: compressed.rs  data_ops.rs  mod.rs
crates/qcow2-core/src/format/: mod.rs
crates/qcow2-format/: Cargo.toml
crates/qcow2-format/src/: bitmap.rs  compressed.rs  constants.rs  error.rs  hash.rs  header.rs  header_extension.rs  l1.rs  l2.rs  lib.rs  refcount.rs  snapshot.rs  types.rs
crates/qcow2-rescue/: Cargo.toml  README.md
crates/qcow2-rescue-e2e/: .gitignore  Cargo.toml  Dockerfile  run.sh
crates/qcow2-rescue-e2e/src/: config.rs  corruptor.rs  fs_setup.rs  image_gen.rs  main.rs  recovery.rs  runner.rs  validator.rs
crates/qcow2-rescue/src/: config.rs  error.rs  lib.rs  main.rs  report.rs
crates/qcow2-rescue/src/reconstruct/: l1.rs  l2.rs  mod.rs  orphan.rs  refcount.rs  scoring.rs
crates/qcow2-rescue/src/recover/: cluster_io.rs  encryption.rs  merge.rs  mod.rs  progress.rs
crates/qcow2-rescue/src/recover/writer/: chain.rs  mod.rs  qcow2.rs  raw.rs
crates/qcow2-rescue/src/report/: cluster.rs  mapping.rs  mod.rs  reconstruction.rs  recovery.rs  tree.rs
crates/qcow2-rescue/src/scan/: classifier.rs  detection.rs  mod.rs  refinement.rs
crates/qcow2-rescue/src/tree/: discovery.rs  mod.rs  resolve.rs
crates/qcow2-rescue/src/validate/: compression.rs  mod.rs  structure.rs
crates/qcow2-rescue/tests/: corruption_recovery.rs
crates/qcow2-tool/: Cargo.toml
crates/qcow2-tool/src/cli/: bitmap.rs  check.rs  compact.rs  convert.rs  dump.rs  hash.rs  info.rs  main.rs  rebase.rs  snapshot.rs
crates/qcow2/benches/: io_overhead.rs
crates/qcow2/examples/: generate_13t.rs  test_normal_writer_compress.rs  test_read_13t.rs
crates/qcow2/src/: error.rs  lib.rs
crates/qcow2/src/engine/: backing.rs  compression.rs  converter.rs  integrity.rs  mod.rs
crates/qcow2/src/engine/block_writer/: create.rs  finalize.rs  mod.rs  write.rs
crates/qcow2/src/engine/encryption/: af_splitter.rs  create.rs  luks_header.rs  mod.rs
crates/qcow2/src/engine/image/: accessors.rs  backing_ops.rs  bitmap.rs  create.rs  hash.rs  integrity.rs  mod.rs  open.rs  read_write.rs  resize.rs  snapshot.rs  tests.rs
crates/qcow2/src/engine/image_async/: accessors.rs  bitmap.rs  hash.rs  integrity.rs  mod.rs  read_write.rs  snapshot.rs  tests.rs
crates/qcow2/src/engine/tests/: mod.rs  test_bitmap_manager.rs  test_cluster_mapping.rs  test_metadata_io.rs  test_reader.rs  test_refcount_manager.rs  test_snapshot_manager.rs  test_writer.rs
crates/qcow2/src/format/: mod.rs
crates/qcow2/src/io/: mod.rs  streaming.rs  sync_backend.rs
crates/qcow2/tests/: allocation.rs  backing_chain.rs  bitmaps.rs  bitmaps_detailed.rs  block_writer.rs  commit_compressed.rs  compression_detailed.rs  convert.rs  corrupt_bit.rs  corruption_detection.rs  cow_detailed.rs  create_options.rs  dirty_flag.rs  edge_cases.rs  encryption.rs  encryption_detailed.rs  encryption_qemu.rs  extended_l2.rs  extended_l2_detailed.rs  external_data.rs  format_round_trip.rs  hashes.rs  header_validation.rs  image_operations.rs  read_basic.rs  refcount_edge_cases.rs  repair.rs  resize.rs  resize_detailed.rs  snapshot_stress.rs  snapshots.rs  snapshots_detailed.rs  stress.rs  write_and_create.rs  write_zeroes.rs  zstd_compression.rs
docs/: README.md  audit.md
docs/format/: 00-index.md  01-overview.md  02-header.md  03-feature-flags.md  04-header-extensions.md  05-cluster-addressing.md  06-extended-l2.md  07-refcount-table.md  08-cluster-types.md  09-compression.md  10-encryption.md  11-snapshots.md  12-bitmaps.md  13-blake3-hashes.md  14-external-data-file.md  15-backing-file.md  README.md  backing-file.md  bitmaps.md  blake3-hashes.md  cluster-addressing.md  cluster-types.md  compression.md  encryption.md  extended-l2.md  external-data-file.md  feature-flags.md  header-extensions.md  header.md  refcount-table.md  snapshots.md
fuzz/: Cargo.toml  build_corpus.rs
fuzz/fuzz_targets/: fuzz_bitmap_extension.rs  fuzz_compression.rs  fuzz_engine_extended_l2.rs  fuzz_engine_ops.rs  fuzz_header_extensions.rs  fuzz_image_open.rs  fuzz_l2_entry.rs  fuzz_refcount_block.rs  fuzz_snapshot_table.rs
qcow2-core/: Cargo.toml
qcow2-core/src/: error.rs  io.rs
scripts/: check-file-length.sh  find-production-expects.sh  find-production-indexing.sh  find-production-panics.sh  find-production-unsafe.sh  find-production-unwraps.sh
src/: error.rs  lib.rs
src/cli/: bitmap.rs  check.rs  commit.rs  compact.rs  convert.rs  dump.rs  hash.rs  info.rs  main.rs  rebase.rs  resize.rs  snapshot.rs
src/engine/: backing.rs  bitmap_manager.rs  cache.rs  cluster_mapping.rs  compression.rs  converter.rs  hash_manager.rs  image.rs  integrity.rs  mod.rs  read_mode.rs  reader.rs  (+3 more)
tests/: allocation.rs  backing_chain.rs  bitmaps.rs  bitmaps_detailed.rs  cli_snapshot_workflow.sh  commit_compressed.rs  compressed_corruption.rs  compression_detailed.rs  convert.rs  corrupt_bit.rs  corruption_detection.rs  cow_detailed.rs  create_options.rs  dirty_flag.rs  edge_cases.rs  encryption.rs  encryption_detailed.rs  encryption_qemu.rs  extended_l2.rs  extended_l2_detailed.rs  external_data.rs  format_round_trip.rs  hashes.rs  header_validation.rs  image_operations.rs  integrity.rs  read_backing.rs  read_basic.rs  read_compressed.rs  refcount_edge_cases.rs  repair.rs  resize.rs  resize_detailed.rs  snapshot_stress.rs  snapshots.rs  snapshots_detailed.rs  stress.rs  write_and_create.rs  write_zeroes.rs  zstd_compression.rs
(+52 files in other folders)
