[workspace]
members = [
    "crates/qcow2-format",
    "crates/qcow2-core",
    "crates/qcow2",
    "crates/qcow2-tool",
    "crates/qcow2-rescue",
    "crates/qcow2-rescue-e2e",
]
resolver = "2"

[workspace.lints.clippy]
cognitive_complexity = "warn"
too_many_lines = "warn"
manual_range_contains = "warn"
