[workspace]
members = [
    "crates/qcow2-format",
    "crates/qcow2-core",
    "crates/qcow2",
    "crates/qcow2-tool",
    "crates/qcow2-rescue",
    "crates/qcow2-rescue-e2e",
]
resolver = "2"
exclude = ["fuzz"]

[workspace.package]
authors = ["Sebastian <sebastian@az-mail.org>"]
edition = "2021"
rust-version = "1.70"
license-file = "LICENSE"
repository = "https://github.com/pcbastler/qcow2-lib"
keywords = ["qcow2", "disk-image", "virtual-machine", "storage"]
categories = ["filesystem", "encoding", "no-std"]

[workspace.lints.clippy]
cognitive_complexity = "warn"
too_many_lines = "warn"
manual_range_contains = "warn"
