[package]
name = "qcow2-core"
version = "0.1.0"
edition = "2021"
description = "no_std QCOW2 image format core: parsing, cluster mapping, read/write engine"
license-file = "../../LICENSE"
rust-version = "1.70"

[dependencies]
qcow2-format = { path = "../qcow2-format" }
byteorder = { version = "1", default-features = false }
bitflags = { version = "2", default-features = false }
blake3 = { version = "1", default-features = false }
aes = { version = "0.8", default-features = false }
xts-mode = { version = "0.5", default-features = false }
cbc = { version = "0.1", default-features = false, features = ["block-padding"] }
cipher = { version = "0.4", default-features = false }
pbkdf2 = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha1 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }

[lints]
workspace = true
