[package]
name = "qcow2-format"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "QCOW2 on-disk format types, constants, and encode/decode — no_std compatible"

[dependencies]
byteorder = { version = "1", default-features = false }
bitflags = { version = "2", default-features = false }

[lints]
workspace = true
