[package]
name = "qcow2-rescue-e2e"
version = "0.1.0"
edition = "2021"
description = "End-to-end tests for qcow2-rescue with real filesystems"
license-file = "../../LICENSE"
rust-version = "1.70"
publish = false

[[bin]]
name = "qcow2-rescue-e2e"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
