[package]
name = "qcow2-rescue-e2e"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
description = "End-to-end tests for qcow2-rescue with real filesystems"
publish = false

[[bin]]
name = "qcow2-rescue-e2e"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
