[package]
name = "qcow2-rescue"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
description = "Recovery tool for corrupted QCOW2 images"

[dependencies]
qcow2-format = { path = "../qcow2-format" }
qcow2-core = { path = "../qcow2-core" }
qcow2 = { path = "../qcow2" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"

[dev-dependencies]
tempfile = "3"
flate2 = "1"

[lib]
name = "qcow2_rescue"
path = "src/lib.rs"

[[bin]]
name = "qcow2-rescue"
path = "src/main.rs"

[lints]
workspace = true
