[package]
name = "qcow2-tool"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI tool for inspecting and managing QCOW2 images"

[dependencies]
qcow2 = { path = "../qcow2" }
clap = { version = "4", features = ["derive"] }
byteorder = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "qcow2-tool"
path = "src/cli/main.rs"

[lints]
workspace = true
