[package]
name = "qcow2"
version = "0.1.0"
edition = "2021"
description = "A textbook-quality QCOW2 image format library for Rust"
license-file = "../../LICENSE"
rust-version = "1.70"

[dependencies]
qcow2-core = { path = "../qcow2-core" }
thiserror = "2"
byteorder = "1"
bitflags = "2"
flate2 = "1"
zstd = "0.13"
lru = "0.12"
blake3 = "1"
aes = "0.8"
xts-mode = "0.5"
cbc = "0.1"
cipher = "0.4"
pbkdf2 = "0.12"
argon2 = "0.5"
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
